--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "构建 react 工作流",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,16 @@
   "bugs": {
     "url": "https://github.com/fengyangfifa/react-workflow/issues"
   },
-  "homepage": "https://github.com/fengyangfifa/react-workflow#readme"
+  "homepage": "https://github.com/fengyangfifa/react-workflow#readme",
+  "devDependencies": {
+    "@babel/core": "^7.18.9",
+    "@babel/plugin-transform-runtime": "^7.18.9",
+    "@babel/preset-env": "^7.18.9",
+    "babel-loader": "^8.2.5",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
+  },
+  "dependencies": {
+    "@babel/runtime-corejs3": "^7.18.9"
+  }
 }
