--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --config webpack.config.js"
+    "dev": "cross-env NODE_ENV=development webpack serve --config webpack.config.development.js",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.production.js"
   },
   "repository": {
     "type": "git",
@@ -23,8 +24,12 @@
     "@babel/plugin-transform-runtime": "^7.18.9",
     "@babel/preset-env": "^7.18.9",
     "babel-loader": "^8.2.5",
+    "cross-env": "^7.0.3",
+    "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "@babel/runtime-corejs3": "^7.18.9"
