--- a/babel.config.json
+++ b/babel.config.json
@@ -1,6 +1,12 @@
 {
   "presets": [
-    "@babel/preset-env"
+    "@babel/preset-env",
+    [
+      "@babel/preset-react",
+      {
+        "runtime": "automatic" // 在文件中自动导入 React
+      }
+    ]
   ],
   "plugins": [
     [
