--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/core": "^7.18.9",
     "@babel/plugin-transform-runtime": "^7.18.9",
     "@babel/preset-env": "^7.18.9",
+    "@babel/preset-react": "^7.18.6",
     "babel-loader": "^8.2.5",
     "cross-env": "^7.0.3",
     "html-webpack-plugin": "^5.5.0",
@@ -32,6 +33,8 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "@babel/runtime-corejs3": "^7.18.9"
+    "@babel/runtime-corejs3": "^7.18.9",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
