--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "module": "ESNext",
     "target": "es5",
     "sourceMap": true,
-    "jsx": "react",
+    "jsx": "react-jsx", // 在 .tsx 文件中不用手动导入 React
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "allowJs": false,
