--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
     "eslint": "^8.21.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-webpack-plugin": "^3.2.0",
@@ -46,6 +48,7 @@
     "postcss-loader": "^7.0.1",
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.7.2",
+    "prettier": "^2.7.1",
     "react-dev-utils": "^12.0.1",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.54.0",
