--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,15 +15,8 @@
     "paths": {
       "@": ["src"] // 配置@/* 指向 src/*，避免 error
     },
-    "lib": [
-      "DOM",
-      "ESNext"
-    ]
+    "lib": ["DOM", "ESNext"]
   },
-  "exclude": [
-    "node_modules"
-  ],
-  "include": [
-    "src"
-  ]
+  "exclude": ["node_modules"],
+  "include": ["src"]
 }
