chore: 修改 tsconfig.json 配置，点击@为路径开始的图片时，自动跳转到对应图片

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
-      "@": ["src"] // 配置@/* 指向 src/*，避免 error
+      "@/*": ["src/*"] // 配置@/* 指向 src/*，避免 error
     },
     "lib": ["DOM", "ESNext"]
   },
