--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "构建 react 工作流",
   "main": "index.js",
   "scripts": {
+    "preinstall": "npx only-allow npm",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cross-env NODE_ENV=development webpack serve --config webpack.config.development.js",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.production.js"
