feat：ts config 添加识别 json 文件

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "sourceMap": true,
     "jsx": "react-jsx", // 在 .tsx 文件中不用手动导入 React
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "allowJs": false,
     "noImplicitAny": true,
